# glfw_opengl_cmake_template

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Info.plist  main.cpp
